# RAG

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
backend/: .gitignore  otel-collector-config.yaml  pyproject.toml
backend/app/: main.py  models.py
backend/app/adapters/: vault.py
backend/app/api/: main.py
backend/app/api/routes/: assistant.py  auth.py  chunk.py  document.py  kb.py  llm.py  metrics.py  probe.py  user.py
backend/app/constants/: common.py
backend/app/core/: config.py  db.py  security.py
backend/app/schemas/: assistant.py  chunk.py  document.py  helpers.py  kb.py  llm.py  user.py
backend/app/services/: common.py  response.py
backend/app/validators/: base.py  kb.py  user.py
frontend/: package-lock.json  package.json
frontend/public/: sw.js.map
